fix(styles): fix focus indicator visibility for links in accordion items on mobile

--- a/packages/components/src/components/post-footer/post-footer.scss
+++ b/packages/components/src/components/post-footer/post-footer.scss
@@ -105,6 +105,10 @@ footer {
   ::part(body) {
     padding-inline: 0;
   }
+  ::part(collapsible-container) {
+    margin-inline: -1rem;
+    padding-inline: 1rem;
+  }
 }
 
 .footer-column {
